[gd_scene load_steps=35 format=3 uid="uid://r2kg4a8p4sld"]

[ext_resource type="Script" uid="uid://bvwwocn1ycoyr" path="res://player/player.gd" id="1_i3pqv"]
[ext_resource type="Texture2D" uid="uid://mlpbvaqcpuvt" path="res://player/player.png" id="2_hqtel"]
[ext_resource type="Script" uid="uid://biehrvcex47r" path="res://player/look_direction.gd" id="3_g1dw6"]
[ext_resource type="Script" uid="uid://dkjj6uf4g82d1" path="res://player/camera.gd" id="3_yw30f"]
[ext_resource type="Script" uid="uid://ch56xqeo31dw5" path="res://player/state_man.gd" id="5_qjkh3"]
[ext_resource type="Script" uid="uid://bfptb64ig2ix" path="res://player/states/attacking.gd" id="6_yllr7"]
[ext_resource type="Script" uid="uid://085b2hwnl5pw" path="res://player/states/dashing.gd" id="7_kb6p2"]
[ext_resource type="Script" uid="uid://cpida4jq1vv1" path="res://player/states/falling.gd" id="8_wodsf"]
[ext_resource type="Script" uid="uid://72wh6qg13v81" path="res://player/states/idle.gd" id="9_32hag"]
[ext_resource type="Script" uid="uid://bggcpd5cuyypk" path="res://player/states/jumping.gd" id="10_tqiix"]
[ext_resource type="Script" uid="uid://c6v8quens22qd" path="res://player/states/LookUp.gd" id="11_e7oew"]
[ext_resource type="Script" uid="uid://df2iqqgn3j6rt" path="res://player/states/lookdown.gd" id="12_c35mf"]
[ext_resource type="Script" uid="uid://dmlukrut636ub" path="res://player/states/running.gd" id="13_65viv"]

[sub_resource type="AtlasTexture" id="AtlasTexture_g1dw6"]
atlas = ExtResource("2_hqtel")
region = Rect2(0, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("2_hqtel")
region = Rect2(96, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("2_hqtel")
region = Rect2(192, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("2_hqtel")
region = Rect2(288, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("2_hqtel")
region = Rect2(384, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("2_hqtel")
region = Rect2(480, 0, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("2_hqtel")
region = Rect2(0, 189, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("2_hqtel")
region = Rect2(96, 189, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("2_hqtel")
region = Rect2(192, 189, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("2_hqtel")
region = Rect2(0, 126, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("2_hqtel")
region = Rect2(96, 126, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("2_hqtel")
region = Rect2(192, 126, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("2_hqtel")
region = Rect2(288, 126, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("2_hqtel")
region = Rect2(0, 63, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqiix"]
atlas = ExtResource("2_hqtel")
region = Rect2(96, 63, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7oew"]
atlas = ExtResource("2_hqtel")
region = Rect2(192, 63, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_c35mf"]
atlas = ExtResource("2_hqtel")
region = Rect2(288, 63, 96, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_65viv"]
atlas = ExtResource("2_hqtel")
region = Rect2(384, 63, 96, 63)

[sub_resource type="SpriteFrames" id="SpriteFrames_x7c3f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}],
"loop": true,
"name": &"Idle",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}],
"loop": false,
"name": &"Jump",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}],
"loop": true,
"name": &"Running",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqiix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7oew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c35mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65viv")
}],
"loop": false,
"name": &"Slash",
"speed": 12.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ryrav"]
radius = 4.0
height = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g1dw6"]
size = Vector2(23, 24)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_i3pqv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7, -17)
sprite_frames = SubResource("SpriteFrames_x7c3f")
animation = &"Slash"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10)
shape = SubResource("CapsuleShape2D_ryrav")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("3_yw30f")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackAnimationTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="LookDirection" type="Node2D" parent="."]
position = Vector2(-1, 1)
script = ExtResource("3_g1dw6")

[node name="Slash" type="Area2D" parent="LookDirection"]
position = Vector2(0, -13)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="LookDirection/Slash"]
position = Vector2(11.5, 1)
shape = SubResource("RectangleShape2D_g1dw6")

[node name="DashTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StateMan" type="Node" parent="." node_paths=PackedStringArray("active_state")]
script = ExtResource("5_qjkh3")
active_state = NodePath("Idle")

[node name="Attacking" type="Node" parent="StateMan"]
script = ExtResource("6_yllr7")

[node name="Dashing" type="Node" parent="StateMan"]
script = ExtResource("7_kb6p2")

[node name="Falling" type="Node" parent="StateMan" node_paths=PackedStringArray("idle_state", "jumping_state", "running_state")]
script = ExtResource("8_wodsf")
idle_state = NodePath("../Idle")
jumping_state = NodePath("../Jump")
running_state = NodePath("../Running")

[node name="Idle" type="Node" parent="StateMan" node_paths=PackedStringArray("jump_state", "dash_state", "running_state", "lookup_state", "lookdown_state")]
script = ExtResource("9_32hag")
jump_state = NodePath("../Jump")
dash_state = NodePath("../Dashing")
running_state = NodePath("../Running")
lookup_state = NodePath("../LookUp")
lookdown_state = NodePath("../LookDown")

[node name="Jump" type="Node" parent="StateMan" node_paths=PackedStringArray("falling_state")]
script = ExtResource("10_tqiix")
falling_state = NodePath("../Falling")

[node name="LookUp" type="Node" parent="StateMan" node_paths=PackedStringArray("idle_state", "lookdown_state", "jump_state", "dash_state", "running_state")]
script = ExtResource("11_e7oew")
idle_state = NodePath("../Idle")
lookdown_state = NodePath("../LookDown")
jump_state = NodePath("../Jump")
dash_state = NodePath("../Dashing")
running_state = NodePath("../Running")

[node name="LookDown" type="Node" parent="StateMan" node_paths=PackedStringArray("idle_state", "lookdown_up", "jump_state", "dash_state", "running_state")]
script = ExtResource("12_c35mf")
idle_state = NodePath("../Idle")
lookdown_up = NodePath("../LookUp")
jump_state = NodePath("../Jump")
dash_state = NodePath("../Dashing")
running_state = NodePath("../Running")

[node name="Running" type="Node" parent="StateMan" node_paths=PackedStringArray("idle_state", "jump_state", "dash_state")]
script = ExtResource("13_65viv")
idle_state = NodePath("../Idle")
jump_state = NodePath("../Jump")
dash_state = NodePath("../Dashing")

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
